--- a/Examples/RAG/excel_rag.ipynb
+++ b/Examples/RAG/excel_rag.ipynb
@@ -2,17 +2,17 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 29,
    "id": "5a7f7d1a",
    "metadata": {},
    "outputs": [],
    "source": [
-    "% pip install pandas openpyxl sentence-transformers faiss-cpu"
+    "# pip install pandas openpyxl sentence-transformers faiss-cpu"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 30,
    "id": "426158b9",
    "metadata": {},
    "outputs": [],
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 31,
    "id": "4fa540c6",
    "metadata": {},
    "outputs": [
@@ -43,7 +43,7 @@
        " 'Ticket ID: T010 | Issue Type: Email | Description: Spam filter blocking valid emails | Priority: Medium | Status: In Progress | Resolution Time (hrs): nan | Assigned To: Judy']"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 31,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -63,10 +63,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 32,
    "id": "a1bd8faf",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/workspaces/Gen-AI-Learning/.venv/lib/python3.12/site-packages/torch/nn/modules/module.py:1762: FutureWarning: `encoder_attention_mask` is deprecated and will be removed in version 4.55.0 for `BertSdpaSelfAttention.forward`.\n",
+      "  return forward_call(*args, **kwargs)\n"
+     ]
+    }
+   ],
    "source": [
     "# Embed the text\n",
     "model = SentenceTransformer('all-MiniLM-L6-v2')\n",
@@ -80,7 +89,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 33,
    "id": "d19c092f",
    "metadata": {},
    "outputs": [],
@@ -98,19 +107,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 34,
    "id": "b6a6c56f",
    "metadata": {},
    "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "1.296107\n",
-      "1.3809313\n",
-      "1.5451112\n"
-     ]
-    },
     {
      "data": {
       "text/plain": [
@@ -118,7 +118,7 @@
        " 'Ticket ID: T006 | Issue Type: Network | Description: VPN connection drops frequently | Priority: High | Status: Open | Resolution Time (hrs): nan | Assigned To: Frank']"
       ]
      },
-     "execution_count": 27,
+     "execution_count": 34,
      "metadata": {},
      "output_type": "execute_result"
     }
