LLM notebook updated

--- a/AgenticAI/LangGraph/LangGraph Agent with MCP.ipynb
+++ b/AgenticAI/LangGraph/LangGraph Agent with MCP.ipynb
@@ -54,8 +54,8 @@
     "\n",
     "# Login to HF using token\n",
     "from huggingface_hub import login\n",
-    "HF_TOKEN = os.getenv(\"HF_TOKEN\")\n",
-    "login(HF_TOKEN)\n",
+    "HUGGINGFACE_TOKEN = os.getenv(\"HUGGINGFACE_TOKEN\")\n",
+    "login(HUGGINGFACE_TOKEN)\n",
     "\n",
     "# Load the Mistral model with Hugging Face Transformers\n",
     "model_name = \"mistralai/Mistral-7B-Instruct-v0.2\"\n",
