--- a/AgenticAI/LLM/LLM with Tool Calling.ipynb
+++ b/AgenticAI/LLM/LLM with Tool Calling.ipynb
@@ -6,11 +6,11 @@
       "id": "1417bd16",
       "metadata": {
         "collapsed": true,
-        "id": "1417bd16",
-        "outputId": "6abf7df8-7b4a-47ba-b1a7-905854c142aa",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "1417bd16",
+        "outputId": "6abf7df8-7b4a-47ba-b1a7-905854c142aa"
       },
       "outputs": [
         {
@@ -47,7 +47,7 @@
         }
       ],
       "source": [
-        "%pip install torch==2.2.0 transformers==4.42.0 sentencepiece protobuf bitsandbytes accelerate --quiet"
+        "%pip install torch==2.2.0 --index-url https://download.pytorch.org/whl/cu118 transformers==4.42.0 bitsandbytes accelerate --quiet"
       ]
     },
     {
